--- a/_publications/2023-10-02-edge-ppf.md
+++ b/_publications/2023-10-02-edge-ppf.md
@@ -3,7 +3,7 @@ title: "Edge states of plane Poiseuille flow"
 collection: publications
 permalink: /publication/2023-10-02-edge-ppf
 excerpt: 'Edge of chaos is the boundary betweeen basins of attractions of laminar and turbulent flows. '
-date: (to be submitted) 2023-10-01
+date: 2023-10-02
 venue:'(To be submitted to) Physical Review Fluids'
 mathjax: true
 ---
