--- a/_publications/2023-10-03-r-heat-tcf.md
+++ b/_publications/2023-10-03-r-heat-tcf.md
@@ -7,4 +7,4 @@ date: 2023-10-03
 venue: '(To be submitted to) Physical Review Fluids'
 mathjax: true
 ---
-Taylor–Couette flow (TCF) refers to the annular flow between two concentric, differentially rotating cylinders. After [Taylor's seminal 1923 article](https://royalsocietypublishing.org/doi/abs/10.1098/rsta.1923.0008), the topic remains an active research area even today after a centrury due to its experimental simplicity and a wide range of applications. I am working with a long time friend Mohammad Atif, currently a postdoc at the Brookheaven National Labs, NY, on a radially heated version of the classical TCF. We are currently writing a paper based on linear stability analysis of the system. 
+Taylor–Couette flow (TCF) refers to the annular flow between two concentric, differentially rotating cylinders. After [Taylor's seminal 1923 article](https://royalsocietypublishing.org/doi/abs/10.1098/rsta.1923.0008), the topic remains an active research area even today after a centrury due to its experimental simplicity and a wide range of applications. I am working with a long time friend [Mohammad Atif](https://scholar.google.com/citations?user=dMnfPA0AAAAJ&hl=en&oi=ao), currently a postdoc at the Brookheaven National Labs, NY, on a radially heated version of the classical TCF. We are currently writing a paper based on linear stability analysis of the system. 
