--- a/_publications/2023-10-03-r-heat-tcf.md
+++ b/_publications/2023-10-03-r-heat-tcf.md
@@ -4,7 +4,7 @@ collection: publications
 permalink: /publication/2023-10-03-r-heat-tcf
 excerpt: 'We perform linear stability analysis of radially heated Taylor-Couette flow.'
 date: 2023-10-03
-venue: '(submitted) '
+venue: '(under prep.) '
 mathjax: true
 paperurl: https://arxiv.org/abs/2303.16415
 ---
