updated tc-r-heat publications page

--- a/_publications/2023-10-03-r-heat-tcf.md
+++ b/_publications/2023-10-03-r-heat-tcf.md
@@ -1,11 +1,29 @@
 ---
 title: "Effect of outer cylinder rotation on the radially heated Taylor-Couette flow"
 collection: publications
-permalink: /publication/2023-10-03-r-heat-tcf
+permalink: /publication/2023-09-03-r-heat-tcf
 excerpt: 'We perform linear stability analysis of radially heated Taylor-Couette flow.'
-date: 2023-10-03
-venue: '(under prep.) '
+date: 2023-09-03
+venue: 'Physics of Fluids'
 mathjax: true
-paperurl: https://arxiv.org/abs/2303.16415
+paperurl: 
 ---
-Taylor–Couette flow (TCF) refers to the annular flow between two concentric, differentially rotating cylinders. After [Taylor's seminal 1923 article](https://royalsocietypublishing.org/doi/abs/10.1098/rsta.1923.0008), the topic remains an active research area even today after a centrury due to its experimental simplicity and a wide range of applications. I am working with a long time friend [Mohammad Atif](https://scholar.google.com/citations?user=dMnfPA0AAAAJ&hl=en&oi=ao), currently a postdoc at the Brookhaven National Labs, NY, on a radially heated version of the classical TCF. We are currently writing a paper based on linear stability analysis of the system. 
+### Summary:
+Taylor–Couette flow (TCF) refers to the annular flow between two concentric, differentially rotating cylinders. After [Taylor's seminal 1923 article](https://royalsocietypublishing.org/doi/abs/10.1098/rsta.1923.0008), the topic remains an active research area even today after a centrury due to its experimental simplicity and a wide range of applications. 
+
+This work adds to the current literature on the radially heated TCF. Some key results of this paper are summarized below. 
+* We find unstable modes in the Rayleigh stable region of the parameter space. 
+* We generalize previously identified symmetries of the linear problem to the case of rotating outer cylinder. 
+* We locate instability islands also known as closed disconnected neutral curves (CDNCs) for a number of parameters.
+* We show by example that CDNCs are sensitive to changes in the rotation rate ratio and their appearance or disappearance can induce discontinous jumps in the critical Taylor number. 
+
+### Code:
+The code used to generate and plot data in the paper can be downloaded from [here](https://github.com/PratikAghor/tc_r_heat_aghor_atif_pof_2023). 
+
+
+### Personal notes:
+
+This paper is special to me for two principal reasons --
+
+(i)  It comes in the year 2023, the hudrenth anniversary of [Taylor's seminal 1923 article](https://royalsocietypublishing.org/doi/abs/10.1098/rsta.1923.0008). It's a personal hat-tip to Taylor's inspiring work.
+(ii) I worked with a long time friend [Mohammad Atif](https://scholar.google.com/citations?user=dMnfPA0AAAAJ&hl=en&oi=ao), currently a postdoc at the Brookhaven National Labs, NY. It was really fun working together.
